# endfield

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  data.json  debug_4225399080.json  debug_6452216126.json  debug_showcase_4225399080.json  debug_showcase_6452216126.json  main.py  new.js  pyproject.toml  showcase.json
scripts/: migrate_character_assets.js
src/endfield/: __init__.py  calculator.py  client.py  data_cache.py  decoder.py  errors.py  proxy_pool.py  resolver.py  update.py
src/endfield/assets/: ascension_break_node.json  asset_metadata.json  avatar_icon.json  business_card_bg.json  character.json  character_full.json  effects_map.json  element.json  equip_type.json  fact_meta.json  formula_suffix.json  gender.json  medals.json  nameMap.json  node_skill_type.json  prop_by_id.json  prop_by_name.json  relic_item.json  relic_suit.json  role.json  splash_offset.json  version.json  weapon.json  weapon_breakthrough_template.json  weapon_gem_template.json  weapon_gem_term.json  weapon_skill.json  weapon_type.json
src/endfield/assets/character/: character.json  character_full.json
src/endfield/assets/common/: ascension_break_node.json  nameMap.json
src/endfield/assets/factory/: fact_meta.json  slugs.json
src/endfield/auth/: api.py  auth.py
src/endfield/basic/: calculator.py
src/endfield/factory/: api.py  factory.py
src/endfield/models/: __init__.py  character.py  profile.py  showcase.py  weapon.py
src/endfield/normal/: calculator.py  decoder.py
src/endfield_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+15 files in other folders)
