[build-system]
requires=["setuptools>=61.0"]
build-backend="setuptools.build_meta"

[project]
name="endfield-py"
version="1.0.9"
description="A Python library for fetching player data from the Enka Network API, Performing daily sign-in rewards collection and fetching current game statistics for a player."
authors=[
    {name="sora", email="sahikast07@gmail.com"}
]
readme="README.md"
license={file="LICENSE.txt"}
dependencies=[
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]